# py2ppt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
aipptx/: __init__.py  presentation.py  template.py
examples/: 01_basic_usage.py  02_with_template.py  03_ai_agent_example.py  04_design_tokens.py  05_validation.py  06_enterprise_features.py  07_aipptx_demo.py  demo.py
py2ppt/: __init__.py  accessibility.py  analysis.py  builder.py  diff.py  export.py  formatting.py  layout.py  markdown.py  patterns.py  placeholders.py  presentation.py  shapes.py  template.py  theme.py  validation.py
py2ppt/core/: __init__.py  placeholder.py  presentation.py  slide.py
py2ppt/oxml/: __init__.py  animation.py  chart.py  comments.py  diagram.py  effects3d.py  fills.py  layout.py  master.py  notes.py  ns.py  package.py  presentation.py  shapes.py  slide.py  text.py  theme.py
py2ppt/template/: __init__.py  analyzer.py  matcher.py  tokens.py
py2ppt/tools/: __init__.py  animation.py  content.py  diagrams.py  export.py  inspection.py  masters.py  media.py  presentation.py  shapes.py  slides.py  style.py  theme.py
py2ppt/utils/: __init__.py  colors.py  errors.py  units.py
py2ppt/validation/: __init__.py  rules.py  validator.py
tests/: __init__.py  conftest.py
tests/aipptx/: __init__.py  test_presentation.py  test_real_templates.py  test_template.py
tests/integration/: test_full_workflow.py
tests/oxml/: __init__.py  test_package.py
tests/test_aipptx/: test_presentation.py  test_real_templates.py  (+1 more)
(+46 files in other folders)
