[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py2ppt"
version = "0.1.0"
description = "AI-Native PowerPoint Library for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "py2ppt contributors"}
]
keywords = ["powerpoint", "pptx", "presentation", "ai", "llm", "openxml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
images = [
    "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/py2ppt/py2ppt"
Documentation = "https://py2ppt.readthedocs.io"
Repository = "https://github.com/py2ppt/py2ppt"

[tool.setuptools.packages.find]
where = ["."]
include = ["py2ppt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["py2ppt"]
omit = ["tests/*"]
